--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>IQLEVAL - AI-Powered Cognitive Learning Platform</title>
+    <meta
+      name="description"
+      content="Experience personalized learning powered by AI. Get customized study plans, adaptive assessments, and real-time feedback based on your cognitive profile."
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="preload"
+      as="image"
+      href="https://grainy-gradients.vercel.app/noise.svg"
+    />
   </head>
   <body>
     <div id="root"></div>
